--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title></title>
+  <title>Мир орхидей</title>
   <link rel="stylesheet" href="libs/animate/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -12,7 +12,38 @@
 </head>
 <body>
 
-	
+<header class="header">
+  <div class="header-up">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-6">
+          <div class="brand-icon">
+            <img src="img/icon.png" alt="">
+          </div>
+        </div>
+        <div class="col-xl-6">
+          <div class="navigation">
+            <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Галерея</a></li>
+              <li><a href="#">Товар</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="second-header">
+    <div class="img-header">
+      <img src="img/m849.jpg" alt="">
+    </div>
+    <div class="button-header">
+      <a href="#"><img src="img/Заказать.png" alt=""></a>
+    </div>
+  </div>
+</header>
+
 <div class="hidden"></div>
 <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -24,6 +55,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="libs/jquery/jquery-2.1.3.min.js"></script>
 <script src="libs/animate/animate-css.js"></script>
+<script src="libs/parallax/parallax.min.js"></script>
 <script type="text/javascript" src="libs/jsbootstrap/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
