main-content_complete

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,120 @@
     </div>
   </div>
 </header>
-
+<main class="main">
+  <div class="main-title">
+    <h3>Главная информация</h3>
+  </div>
+  <div class="main-descrp">
+    <p>Все цветы, которые показаны на главной страницу, можно купить в разделе заказа товара</p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-4">
+        <div class="main-content">
+          <div class="content-title">
+            <p>Фаленопсис</p>
+          </div>
+          <div class="content-img">
+            <img src="img/komnatnye-orhidei.jpg" alt="">
+          </div>
+          <div class="content-descrp">
+            <p>Фаленопсис относится к роду Орхидных. Орхидея, как самостоятельный вид был впервые изучен ботаником Карлом Риттером фон Блюменом в далеком 19 веке. Эти растения обитают в сырых равнинах и высоких лесах Северной Австралии, Филиппинах и Южной Азии. Отличительные особенности этих цветов можно раскрыть по их длинноватому стеблю с четырьмя большими листьями, расположенными двумя рядами</p>
+          </div>
+          <div class="publsh-content">
+            <p>Публикация: Наташа</p>
+          </div>
+          <div class="date-publish">
+            <p>Дата публикации: 11.09.2017</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="main-content">
+          <div class="content-title">
+            <p>Фаленопсис Шиллера</p>
+          </div>
+          <div class="content-img">
+            <img src="img/kak-polivat-orhidei.jpg" alt="">
+          </div>
+          <div class="content-descrp">
+            <p>Единственный из наиболее известных Фаленопсис, который по собственному типу попросту объединяет всех «фанатов любви» к орхидеям. Фаленопсис Шиллера содержит весьма увлекательные многоцветные листья, которые различаются напылением сверху. Весьма неожиданное различие этого семейства заключается в большом количестве расцветок в одном цветоносе. Был даже случай, когда эта цифра доходила до 174. Цветение длится всего пару месяцев, но зато по нескольку раз в год.</p>
+          </div>
+          <div class="publsh-content">
+            <p>Публикация: Наташа</p>
+          </div>
+          <div class="date-publish">
+            <p>Дата публикации: 11.09.2017</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="main-content">
+          <div class="content-title">
+            <p>Каттлея ( Cattleya )</p>
+          </div>
+          <div class="content-img">
+            <img src="img/komnatnaya-orhideya.jpg" alt="">
+          </div>
+          <div class="content-descrp">
+            <p>У каттлеи прекрасные прозрачно-восковые цветы с волнистой живописной губой. Эти гигантские растения из абсолютно всех видов домашних орхидей, но бывают среди них и маленькие. Разновидностей множество, также как их разнообразной палитры красок. Чтобы выращивать их в комнате, лучше всего подойдут гибридные типы, так как их проще выращивать, нежели другие. Цветение длится приблизительно три месяца с весны до осени</p>
+          </div>
+          <div class="publsh-content">
+            <p>Публикация: Наташа</p>
+          </div>
+          <div class="date-publish">
+            <p>Дата публикации: 11.09.2017</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="main-content">
+          <div class="content-title">
+            <p>Камбрия</p>
+          </div>
+          <div class="content-img">
+            <img src="img/3009a-189.jpg" alt="">
+          </div>
+          <div class="content-descrp">
+            <p>Это растение не встречается в природе. Камбрия представляет собой межродовой гибрид орхидей трех родов, более правильно называемый Vuylstekeara. Ее долговечные цветки имеют различные формы и размеры, а длинные цветоносы нуждаются в поддержке. Наиболее подходящим местом для этого растения является подоконник. Летом необходимо обеспечить притенение от прямых солнечных лучей. Камбрию следует держать в комнате, которая освещается зимой после наступления темноты. Минимальная температура зимой должна составлять 13 °С. Субстрат в горшке никогда не должен высыхать — зимой полив уменьшают, но полностью не прекращают.</p>
+          </div>
+          <div class="publsh-content">
+            <p>Публикация: Наташа</p>
+          </div>
+          <div class="date-publish">
+            <p>Дата публикации: 11.09.2017</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="nav-footer">
+          <h4>Навигация</h4>
+          <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Галерея</a></li>
+            <li><a href="#">Товар</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col align-self-center justify-content-center">
+        <div class="social-button">
+          <ul>
+            <li><a href="#"><img src="img/youtube.png" alt=""></a></li>
+            <li><a href="#"><img src="img/twitter.png" alt=""></a</li>
+            <li><a href="#"><img src="img/facebook.png" alt=""></a</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 <div class="hidden"></div>
 <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
