--- a/app/index.html
+++ b/app/index.html
@@ -64,10 +64,10 @@
             <p>Фаленопсис относится к роду Орхидных. Орхидея, как самостоятельный вид был впервые изучен ботаником Карлом Риттером фон Блюменом в далеком 19 веке. Эти растения обитают в сырых равнинах и высоких лесах Северной Австралии, Филиппинах и Южной Азии. Отличительные особенности этих цветов можно раскрыть по их длинноватому стеблю с четырьмя большими листьями, расположенными двумя рядами</p>
           </div>
           <div class="publsh-content">
-            <p>Публикация: Наташа</p>
+            <p><i class="fa fa-id-badge"></i>Публикация: Наташа</p>
           </div>
           <div class="date-publish">
-            <p>Дата публикации: 11.09.2017</p>
+            <p><i class="fa  fa-calendar"></i>Дата публикации: 11.09.2017</p>
           </div>
         </div>
       </div>
@@ -83,10 +83,10 @@
             <p>Единственный из наиболее известных Фаленопсис, который по собственному типу попросту объединяет всех «фанатов любви» к орхидеям. Фаленопсис Шиллера содержит весьма увлекательные многоцветные листья, которые различаются напылением сверху. Весьма неожиданное различие этого семейства заключается в большом количестве расцветок в одном цветоносе. Был даже случай, когда эта цифра доходила до 174. Цветение длится всего пару месяцев, но зато по нескольку раз в год.</p>
           </div>
           <div class="publsh-content">
-            <p>Публикация: Наташа</p>
+            <p><i class="fa fa-id-badge"></i>Публикация: Наташа</p>
           </div>
           <div class="date-publish">
-            <p>Дата публикации: 11.09.2017</p>
+            <p><i class="fa  fa-calendar"></i>Дата публикации: 11.09.2017</p>
           </div>
         </div>
       </div>
@@ -102,10 +102,10 @@
             <p>У каттлеи прекрасные прозрачно-восковые цветы с волнистой живописной губой. Эти гигантские растения из абсолютно всех видов домашних орхидей, но бывают среди них и маленькие. Разновидностей множество, также как их разнообразной палитры красок. Чтобы выращивать их в комнате, лучше всего подойдут гибридные типы, так как их проще выращивать, нежели другие. Цветение длится приблизительно три месяца с весны до осени</p>
           </div>
           <div class="publsh-content">
-            <p>Публикация: Наташа</p>
+            <p><i class="fa fa-id-badge"></i>Публикация: Наташа</p>
           </div>
           <div class="date-publish">
-            <p>Дата публикации: 11.09.2017</p>
+            <p><i class="fa  fa-calendar"></i>Дата публикации: 11.09.2017</p>
           </div>
         </div>
       </div>
@@ -121,10 +121,10 @@
             <p>Это растение не встречается в природе. Камбрия представляет собой межродовой гибрид орхидей трех родов, более правильно называемый Vuylstekeara. Ее долговечные цветки имеют различные формы и размеры, а длинные цветоносы нуждаются в поддержке. Наиболее подходящим местом для этого растения является подоконник. Летом необходимо обеспечить притенение от прямых солнечных лучей. Камбрию следует держать в комнате, которая освещается зимой после наступления темноты. Минимальная температура зимой должна составлять 13 °С. Субстрат в горшке никогда не должен высыхать — зимой полив уменьшают, но полностью не прекращают.</p>
           </div>
           <div class="publsh-content">
-            <p>Публикация: Наташа</p>
+            <p><i class="fa fa-id-badge"></i>Публикация: Наташа</p>
           </div>
           <div class="date-publish">
-            <p>Дата публикации: 11.09.2017</p>
+            <p><i class="fa  fa-calendar"></i>Дата публикации: 11.09.2017</p>
           </div>
         </div>
       </div>
@@ -134,10 +134,10 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-xl-9">
         <div class="nav-footer">
-          <h4>Навигация</h4>
           <ul>
+            <li><h4>Навигация</h4></li>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Галерея</a></li>
             <li><a href="#">Товар</a></li>
@@ -145,7 +145,7 @@
           </ul>
         </div>
       </div>
-      <div class="col align-self-center justify-content-center">
+      <div class="col-xl-3 align-self-center">
         <div class="social-button">
           <ul>
             <li><a href="#"><img src="img/youtube.png" alt=""></a></li>
