last_file_complete

--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Мир орхидей</title>
+  <title>Мир орхидей | Главная</title>
   <link rel="stylesheet" href="libs/animate/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
+<div class="preloader">
+  <div class="loader"></div>
+</div>
 <header class="header">
   <div class="header-up">
     <div class="container">
@@ -24,10 +26,10 @@
         <div class="col-xl-6">
           <div class="navigation">
             <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">Галерея</a></li>
-              <li><a href="#">Товар</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="gallery.html">Галерея</a></li>
+              <li><a href="product.html">Товар</a></li>
+              <li><a href="contacts.html">Контакты</a></li>
             </ul>
           </div>
         </div>
@@ -39,7 +41,7 @@
       <img src="img/m849.jpg" alt="">
     </div>
     <div class="button-header">
-      <a href="#"><img src="img/Заказать.png" alt=""></a>
+      <a href="product.html"><img src="img/Заказать.png" alt=""></a>
     </div>
   </div>
 </header>
@@ -50,7 +52,7 @@
   <div class="main-descrp">
     <p>Все цветы, которые показаны на главной страницу, можно купить в разделе заказа товара</p>
   </div>
-  <div class="container">
+  <div class="container animated fadeInUp">
     <div class="row">
       <div class="col-xl-4">
         <div class="main-content">
@@ -138,19 +140,19 @@
         <div class="nav-footer">
           <ul>
             <li><h4>Навигация</h4></li>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Галерея</a></li>
-            <li><a href="#">Товар</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="product.html">Товар</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
           </ul>
         </div>
       </div>
       <div class="col-xl-3 align-self-center">
         <div class="social-button">
           <ul>
-            <li><a href="#"><img src="img/youtube.png" alt=""></a></li>
-            <li><a href="#"><img src="img/twitter.png" alt=""></a</li>
-            <li><a href="#"><img src="img/facebook.png" alt=""></a</li>
+            <li><a href="http://youtube.com"><img src="img/youtube.png" alt=""></a></li>
+            <li><a href="http://twitter.com"><img src="img/twitter.png" alt=""></a></li>
+            <li><a href="http://facebook.com"><img src="img/facebook.png" alt=""></a></li>
           </ul>
         </div>
       </div>
