--- a/app/gallery.html
+++ b/app/gallery.html
@@ -14,6 +14,7 @@
 <div class="preloader">
   <div class="loader"></div>
 </div>
+
 <header class="header">
   <div class="header-up">
     <div class="container">
@@ -57,7 +58,9 @@
           <img src="img/pexels-photo-459150.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Посмотреть
+          </button>
         </div>
       </div>
       <div class="col-xl-4">
@@ -65,7 +68,9 @@
           <img src="img/orquidea-flower-love-delicacy-65699.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-2">
+            Посмотреть
+          </button>
         </div>
       </div>
       <div class="col-xl-4">
@@ -73,7 +78,9 @@
           <img src="img/pexels-photo-531714.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-3">
+            Посмотреть
+          </button>
         </div>
       </div>
       <div class="col-xl-4">
@@ -81,7 +88,9 @@
           <img src="img/pexels-photo-62403.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-4">
+            Посмотреть
+          </button>
         </div>
       </div>
       <div class="col-xl-4">
@@ -89,7 +98,9 @@
           <img src="img/pexels-photo-66181.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-5">
+            Посмотреть
+          </button>
         </div>
       </div>
       <div class="col-xl-4">
@@ -97,12 +108,181 @@
           <img src="img/orchid-purple-orchid-garden-sri-lanka-63303.jpeg" alt="">
         </div>
         <div class="view-gallary">
-          <p>Просмотреть</p>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-6">
+            Посмотреть
+          </button>
         </div>
       </div>
     </div>
   </div> 
 </main>
+<!-- Modal 1-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/pexels-photo-459150.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>Фаленопсис относится к роду Орхидных. Орхидея, как самостоятельный вид был впервые изучен ботаником Карлом Риттером фон Блюменом в далеком 19 веке. Эти растения обитают в сырых равнинах и высоких лесах Северной Австралии, Филиппинах и Южной Азии. Отличительные особенности этих цветов можно раскрыть по их длинноватому стеблю с четырьмя большими листьями, расположенными двумя рядами</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 2-->
+<div class="modal fade" id="exampleModal-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/orquidea-flower-love-delicacy-65699.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>Единственный из наиболее известных Фаленопсис, который по собственному типу попросту объединяет всех «фанатов любви» к орхидеям. Фаленопсис Шиллера содержит весьма увлекательные многоцветные листья, которые различаются напылением сверху. Весьма неожиданное различие этого семейства заключается в большом количестве расцветок в одном цветоносе. Был даже случай, когда эта цифра доходила до 174. Цветение длится всего пару месяцев, но зато по нескольку раз в год.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 3-->
+<div class="modal fade" id="exampleModal-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/pexels-photo-531714.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>У каттлеи прекрасные прозрачно-восковые цветы с волнистой живописной губой. Эти гигантские растения из абсолютно всех видов домашних орхидей, но бывают среди них и маленькие. Разновидностей множество, также как их разнообразной палитры красок. Чтобы выращивать их в комнате, лучше всего подойдут гибридные типы, так как их проще выращивать, нежели другие. Цветение длится приблизительно три месяца с весны до осени</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 4-->
+<div class="modal fade" id="exampleModal-4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/pexels-photo-62403.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>Это растение не встречается в природе. Камбрия представляет собой межродовой гибрид орхидей трех родов, более правильно называемый Vuylstekeara. Ее долговечные цветки имеют различные формы и размеры, а длинные цветоносы нуждаются в поддержке. Наиболее подходящим местом для этого растения является подоконник. Летом необходимо обеспечить притенение от прямых солнечных лучей. Камбрию следует держать в комнате, которая освещается зимой после наступления темноты. Минимальная температура зимой должна составлять 13 °С. Субстрат в горшке никогда не должен высыхать — зимой полив уменьшают, но полностью не прекращают.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 5-->
+<div class="modal fade" id="exampleModal-5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/pexels-photo-66181.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>Королева Орхидей, с моей точки зрения - это Ванда! Думаю, что многих, кто увидел ее впервые, удивит внешний вид Ванды. Дело в том, что эта Орхидея произрастает в природе абсолютно с голой корневой системой. Питается растение влагой из внешней среды - туманами, дождями и птичьим пометом, и т.к. в местах ее произрастания относительная влажность воздуха достигает 100% - ни в субстрате, ни в опорах она не нуждается. В последнее время селекционеры ударно поработали над гибридной формой Ванды, значительно пополнив разнообразие цветовой гаммы данного вида. Окраска завораживает экзотическими комбинациями оранжевых, красных, и фиолетовых оттенков. Доминирующий цвет этих орхидей - голубой.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal 6-->
+<div class="modal fade" id="exampleModal-6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Посмотреть на цветок</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-name-content">
+          <p>Название цветка</p>
+        </div>
+        <div class="modal-img-content">
+          <img src="img/orchid-purple-orchid-garden-sri-lanka-63303.jpeg" alt="">
+        </div>
+        <div class="modal-text-content">
+          <p>Цимбидиум - крупная, высокая Орхидея с длинными заостренными листьями и тесно сгруппированными псевдобульбами яйцевидной формы. В продаже можно встретить как миниатюрные виды Орхидей Цимбидиум, так и до одного метра высотой. Цветоносы данного вида на протяжении многих лет используют в срезке для букетов. Это связано с тем, что цветки Цимбидиума стойкие, долгое время остаются без изменений относительно в хорошей форме. В большинстве литературных изданий этот вид описывается как «наземник», произрастающий в основном у подножия деревьев на лесной подстилке, но может расти и эпифитно. Цимбидиум неприхотлив в уходе, но как показала практика, практически не цветет в комнатных условиях.</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <footer class="footer">
   <div class="container">
@@ -130,6 +310,7 @@
     </div>
   </div>
 </footer>
+
 <div class="hidden"></div>
 <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -142,8 +323,12 @@
 <script src="libs/jquery/jquery-2.1.3.min.js"></script>
 <script src="libs/animate/animate-css.js"></script>
 <script src="libs/parallax/parallax.min.js"></script>
-<script type="text/javascript" src="libs/jsbootstrap/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
+
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
